Finished robot face.

--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,38 +1,136 @@
 .robot-container {
+    width: 100%; 
+    height: 200vh; 
+    border: 7px solid white; 
+    
 }
 
 .robot-face-shape {
+    width: 35%; 
+    height: 550px; 
+    border: 2px solid white; 
+    position: absolute; 
+    top: 200px; 
+    left: 500px; 
+    border-radius: 10px 10px 40px 40px; 
+
+
 }
 
 .robot-eye-left {
+    width: 75px; 
+    height: 75px; 
+    border: 3px solid white; 
+    position: relative; 
+    left: 105px; 
+    top: 90px; 
+    border-radius: 50%; 
 }
 
 .robot-eye-right {
+    width: 75px; 
+    height: 75px; 
+    border: 3px solid white; 
+    position: relative; 
+    left: 305px; 
+    top: 18px; 
+    border-radius: 50%; 
+    
+    
 }
 
 .robot-ear-left {
+    width: 35px; 
+    height: 165px; 
+    border: 2px solid white;  
+    position: relative; 
+    top: 240px; 
+    left: 455px; 
+    border-radius: 7px 12px 40px 9px; 
 }
 
 .robot-ear-right {
+    width: 35px; 
+    height: 165px; 
+    border: 2px solid white;  
+    position: relative; 
+    top: 85px; 
+    left: 1010px; 
+    border-radius: 7px 12px 40px 9px; 
+
 }
 
 .robot-nose {
-}
+    height: 100px; 
+    aspect-ratio: 1;
+    clip-path: polygon(50% 0,100% 50%,50% 100%,0 50%);
+    background: #88A65E;
+    position: relative; 
+    left: 185px; 
+    top: 75px; 
+  }
+
+
+
 
 .robot-teeth {
-}
-
-.robot-tooth {
-}
+ 
+    --n: 5; /* the number of bars */
+    --g: 30%; /* control the gap */
+    height: 20px;
+    width: 100px; 
+    aspect-ratio: 1.5;
+    background: #8FBE00;
+    mask:
+      linear-gradient(-90deg,#0000 var(--g),#000 0) 
+       0/calc(100%/var(--n)) intersect,
+      linear-gradient(to top left,#000 50%,#0000 0),
+      linear-gradient(to top left,#000 calc(50% + 50%/var(--n)),#0000 0) intersect,
+      repeating-conic-gradient(#000 0 25%,#0000 0 50%)
+       0 100%/calc(200%/var(--n)) calc(200%/var(--n));
+       position: relative; 
+       left: 200px; 
+       top: 200px; 
+  }
+  
 
 .robot-hair-style {
-}
+
+    --r: 40px; /* radius */
+  
+    width: 300px;
+    aspect-ratio: 1.5;
+    background: #519548;
+    border-radius: 0 var(--r)/0 calc(2*var(--r));
+    padding-block: var(--r);
+    --_m:#0000 100%,#000 calc(100% + 1px);
+    mask:
+      conic-gradient(#000 0 0) content-box,
+      radial-gradient(var(--r) at 100% 0,var(--_m)) no-repeat,
+      radial-gradient(var(--r) at 0 100%,var(--_m)) 100% 100% no-repeat;
+    mask-size: var(--r) var(--r);
+    position: relative; 
+    top: -200px;
+    left: 530px; 
+    width: 450px;  
+    height: 150px; 
+  }
 
 .robot-hair-one {
+    border: 2px solid white; 
+    border-radius: 30px 30px 20px 10px; 
 }
 
 .robot-hair-two {
+     
+    width: 100px; 
+    height: 25px; 
+    border-radius: 10px 20px 10px 20px; 
 }
 
 .robot-hair-three {
+    
+    width: 50px; 
+    height: 100px; 
+    
 }
