--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -9,6 +9,9 @@
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
+
+
+
 }
 
 main {
@@ -22,14 +25,16 @@ section {
   padding: 30px;
   max-width: 900px;
   margin: 0 auto;
-  color: white;
+  color: white; 
 }
 
 .section-label {
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
-  padding: 10px 16px;
+  padding: 10px 16px; 
+  position: sticky; 
+  top: 75px; 
 }
 
 .document-content {
@@ -59,6 +64,10 @@ footer {
   background-color: #e2e2e2;
   padding: 0 30px;
   min-height: 70px;
+  position: fixed; 
+  bottom: 0; 
+  
+
 }
 
 .footer-content {
@@ -69,6 +78,8 @@ footer {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+  position: fixed; 
+  bottom: 0; 
 }
 
 .agree-btn {
