--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -1,21 +1,16 @@
 .legal-header {
   background-color: #e2e2e2;
   padding: 30px;
-  margin-top: 60px;
   width: 100%;
+  margin: 50px auto; 
+  position: fixed; 
+  top: 0;   
 }
 
 .legal-header h1 {
   width: 100%;
   max-width: 900px;
-  margin: 0 auto;
-
-
-
-}
-
-main {
-  border: 5px solid red; 
+  
 }
 
 section {
@@ -43,6 +38,9 @@ section {
   flex-direction: column;
   gap: 30px;
   max-width: 600px;
+  padding: 100px; 
+  margin-top: 70px; 
+  
 }
 
 .document-content p {
@@ -64,9 +62,12 @@ footer {
   width: 100%;
   background-color: #e2e2e2;
   padding: 0 30px;
-  min-height: 70px;
+  min-height: 40px;
   position: fixed; 
   bottom: 0; 
+  
+   
+  
   
 
 }
@@ -79,8 +80,6 @@ footer {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  position: fixed; 
-  bottom: 0; 
 }
 
 .agree-btn {
