--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,6 +1,6 @@
 .robot-container {
     width: 100%; 
-    height: 200vh; 
+    height: 9rem; 
     border: 7px solid white; 
     position: relative; 
     margin: 10px auto; 
@@ -15,6 +15,10 @@
    position: relative; 
    border-radius: 12px 12px 90px 90px; 
    border: 7px solid green; 
+   background-image: url("https://picsum.photos/seed/picsum/200/300");
+   background-repeat: no-repeat;
+   opacity: 0.8; 
+   background-size: 100%; 
 }
 
 .robot-eye-left {
