--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -5,6 +5,7 @@
   margin: 50px auto; 
   position: fixed; 
   top: 0;   
+  z-index: 10;
 }
 
 .legal-header h1 {
@@ -20,8 +21,9 @@ section {
   border-bottom: 1px solid grey;
   padding: 30px;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 75px auto;
   color: white; 
+   
 }
 
 .section-label {
@@ -30,7 +32,7 @@ section {
   height: max-content;
   padding: 10px 16px; 
   position: sticky; 
-  top: 75px; 
+  top: 175px; 
 }
 
 .document-content {
