--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,7 +1,6 @@
 .robot-container {
     width: 100%; 
     height: 9rem; 
-    border: 7px solid white; 
     position: relative; 
     margin: 10px auto; 
     
@@ -94,7 +93,7 @@
 
 .robot-hair-style {
  
-    --r: 25px; /* radius of circles */
+    --r: 10px; 
     height: 120px;
     width: 400px;
     aspect-ratio: 1;
